--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@
     position: fixed;
     width: 100%;
     padding: 15px 0;
-    background: crimson;
+    /* background: crimson; */
     font-family: 'Ubuntu', sans-serif;
 }
 
@@ -35,6 +35,10 @@
     font-weight: 600;
 }
 
+.navbar .logo a span{
+    color: crimson;
+}
+
 .navbar .menu li{
     list-style-type: none;
     display: inline-block;
@@ -45,6 +49,11 @@
     font-size: 18px;
     font-weight: 500;
     margin-left: 25px;
+    transition: color 0.3s ease;
+}
+
+.navbar .menu li a:hover{
+    color: crimson;
 }
 
 /* home section styles */
