--- a/css/styles.css
+++ b/css/styles.css
@@ -18,9 +18,14 @@
 .navbar{
     position: fixed;
     width: 100%;
-    padding: 15px 0;
+    padding: 30px 0;
     /* background: crimson; */
     font-family: 'Ubuntu', sans-serif;
+}
+
+.navbar.sticky{
+    padding: 30px 0;
+    background: crimson;
 }
 
 .navbar .max-width{
