--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@
     padding: 30px 0;
     /* background: crimson; */
     font-family: 'Ubuntu', sans-serif;
+    transition: all 0.3s ease;
 }
 
 .navbar.sticky{
