--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@
 }
 
 .navbar.sticky{
-    padding: 30px 0;
+    padding: 15px 0;
     background: crimson;
 }
 
@@ -43,6 +43,11 @@
 
 .navbar .logo a span{
     color: crimson;
+    transition: all 0.3s ease;
+}
+
+.navbar.sticky .logo a span{
+    color: #fff;
 }
 
 .navbar .menu li{
@@ -60,6 +65,10 @@
 
 .navbar .menu li a:hover{
     color: crimson;
+}
+
+.navbar.sticky .menu li a:hover{
+    color: #fff;
 }
 
 /* home section styles */
