--- a/css/styles.css
+++ b/css/styles.css
@@ -115,3 +115,25 @@
     color: crimson;
     font-weight: 500;
 }
+
+/* responsive media query start */
+
+@media (max-width: 990px){
+    .max-width{
+        padding: 0 50px;
+    }
+    .navbar .menu{
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        left: 0;
+        top: 0;
+        background: #111;
+    }
+    .navbar .menu li{
+        display: block;
+    }
+    .navbar .menu li a{
+        display: inline-block;
+    }
+}  
