--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,9 @@
         display: block;
         z-index: 999;
     }
+    .menu-btn i.active:before{
+        content: "\f00d";
+    }
     
     .navbar .menu{
         position: fixed;
@@ -136,6 +139,7 @@
         background: #111;
         text-align: center;
         padding-top: 80px;
+        transition: all 0.3s ease;
     }
     .navbar .menu.active{
         left: 0;
