--- a/css/styles.css
+++ b/css/styles.css
@@ -117,11 +117,19 @@
 }
 
 /* responsive media query start */
+@media (max-width:1104px){
+    .home .max-width{
+        margin-left: 0px;
+    }
+}
 
-@media (max-width: 947px){
+@media (max-width: 991px){
     .max-width{
         padding: 0 50px;
     }
+}
+
+@media (max-width: 947px){
     .menu-btn{
         display: block;
         z-index: 999;
@@ -156,4 +164,31 @@
     .navbar .menu li a:hover{
         color: crimson;
     }
-}  
+    .home .home-content .text-2{
+        font-size: 70px;
+    }
+    .home .home-content .text-3{
+        font-size: 35px;
+    }
+}
+
+@media (max-width: 690px){
+    .max-width{
+        padding: 0 23px;
+    }
+    .home .home-content .text-2{
+        font-size: 60px;
+    }
+    .home .home-content .text-3{
+        font-size: 32px;
+    }
+}
+
+@media (max-width: 500px){
+    .home .home-content .text-2{
+        font-size: 50px;
+    }
+    .home .home-content .text-3{
+        font-size: 27px;
+    }
+}
