--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,22 @@
     font-weight: 500;
 }
 
+.home .home-content a{
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 25px;
+    padding: 12px 36px;
+    border-radius: 5px;
+    margin-top: 20px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+.home .home-content a:hover{
+    color: crimson;
+    background: none;
+}
+
 /* responsive media query start */
 @media (max-width:1104px){
     .home .max-width{
@@ -170,6 +186,10 @@
     .home .home-content .text-3{
         font-size: 35px;
     }
+    .home .home-content a{
+        font-size: 23px;
+        padding: 10px 30px;
+    }
 }
 
 @media (max-width: 690px){
@@ -182,6 +202,10 @@
     .home .home-content .text-3{
         font-size: 32px;
     }
+    .home .home-content a{
+        font-size: 20px;
+        padding: 9px 25px;
+    } 
 }
 
 @media (max-width: 500px){
