--- a/css/styles.css
+++ b/css/styles.css
@@ -132,18 +132,47 @@
     background: none;
 }
 /* about section styling */
+section{
+    padding: 100px 0;
+}
 .about{
     font-family: 'Poppins', sans-serif;
 }
 .about .title{
+    position: relative;
     font-family: 'Ubuntu', sans-serif;
+    text-align: center;
+    font-weight: 500;
+    font-size: 40px;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+}
+.about .title::before{
+    content: "";
+    position: absolute;
+    width: 180px;
+    height: 3px;
+    bottom: 0px;
+    left: 50%;
+    background: #111;
+    transform: translateX(-50%);
+}
+.about .title::after{
+    content: "who i am";
+    position: absolute;
+    padding: 5px;
+    bottom: -12px;
+    left: 50%;
+    font-size: 20px;
+    color: crimson;
+    background: #fff;
+    transform: translateX(-50%);
 }
 .about .about-content .column-left img{
     height: 400px;
     width: 400px;
     object-fit: cover;
 }
-
 
 /* responsive media query start */
 @media (max-width:1104px){
