--- a/css/styles.css
+++ b/css/styles.css
@@ -216,9 +216,15 @@ section{
 }
 
 /* responsive media query start */
-@media (max-width:1104px){
+@media (max-width: 1300px){
     .home .max-width{
         margin-left: 0px;
+    }
+}
+@media (max-width:1104px){
+    .about .about-content .left img{
+        height: 350px;
+        width: 350px;
     }
 }
 
@@ -272,6 +278,20 @@ section{
     .home .home-content a{
         font-size: 23px;
         padding: 10px 30px;
+    }
+    .max-width{
+        max-width: 800px;
+    }
+    .about .about-content .column{
+        width: 100%;
+    }
+    .about .about-content .left{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+    .about .about-content .right{
+        flex: 100%;
     }
 }
 
