--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,17 @@
 section{
     padding: 100px 0;
 }
+.about, .services, .skills{
+    font-family: 'Poppins', sans-serif;
+}
+.about .about-content,
+.services .services-content, 
+.skills .skills-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
 section .title{
     position: relative;
     font-family: 'Ubuntu', sans-serif;
@@ -165,17 +176,8 @@ section .title::after{
     transform: translateX(-50%);
 }
 /* about section styling */
-.about, .services, .skills{
-    font-family: 'Poppins', sans-serif;
-}
 .about .title::after{
     content: "who i am";
-}
-.about .about-content, .services .services-content{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
 }
 .about .about-content .left{
     width: 45%;
@@ -263,8 +265,12 @@ section .title::after{
 }
 
 /* Skills section */
-
-
+.skills .title::after{
+    content: "what i know";
+}
+.skills .skills-content .column{
+    width: calc(50% - 30px);
+}
 
 /* responsive media query start */
 @media (max-width: 1300px){
