skills section right side styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -271,6 +271,23 @@ section .title::after{
 .skills .skills-content .column{
     width: calc(50% - 30px);
 }
+.skills .skills-content .left .text{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.skills .skills-content .right .bars{
+    margin-bottom: 15px;
+}
+.skills .skills-content .right .info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.skills .skills-content .right span{
+    font-weight: 500;
+    font-size: 18px;
+}
 
 /* responsive media query start */
 @media (max-width: 1300px){
