updated html css and js files

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ section{
     padding: 0 80px;
     margin: auto;
 }
-.about, .services, .skills, .teams, .contact, footer{
+.about, .services, .skills, .projects, .contact, footer{
     font-family: 'Poppins', sans-serif;
 }
 .about .about-content,
@@ -351,25 +351,25 @@ section .title::after{
     background: crimson;
 }
 .skills-content .right .html::before{
-    width: 90%;
+    width: 85%;
 }
 .skills-content .right .css::before{
     width: 60%;
 }
 .skills-content .right .js::before{
-    width: 80%;
+    width: 40%;
 }
-.skills-content .right .php::before{
-    width: 50%;
-}
-.skills-content .right .mysql::before{
+.skills-content .right .ms::before{
     width: 70%;
 }
-/* teams section styling */
-.teams .title::after{
-    content: "who with me";
+.skills-content .right .photoshop::before{
+    width: 70%;
 }
-.teams .carousel .card{
+/* projects section styling */
+.projects .title::after{
+    content: "my work";
+}
+.projects .slider .card{
     background: #222;
     border-radius: 6px;
     padding: 25px 35px;
@@ -377,25 +377,25 @@ section .title::after{
     overflow: hidden;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover{
+.projects .slider .card:hover{
     background: crimson;
 }
-.teams .carousel .card .box{
+.projects .slider .card .box{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover .box{
+.projects .slider .card:hover .box{
     transform: scale(1.05);
 }
-.teams .carousel .card .text{
+.projects .slider .card .text{
     font-size: 25px;
     font-weight: 500;
     margin: 10px 0 7px 0;
 }
-.teams .carousel .card img{
+.projects .slider .card img{
     height: 150px;
     width: 150px;
     object-fit: cover;
@@ -403,7 +403,7 @@ section .title::after{
     border: 5px solid crimson;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover img{
+.projects .slider .card:hover img{
     border-color: #fff;
 }
 .owl-dots{
