--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,9 @@
     box-sizing: border-box;
     text-decoration: none;
 }
+:root{
+    --main-color: #62CDFF;
+}
 html{
     scroll-behavior: smooth;
 }
@@ -67,7 +70,7 @@ section .title::after{
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: crimson;
+    color: var(--main-color);
     padding: 0 5px;
     background: #fff;
     transform: translateX(-50%);
@@ -83,7 +86,7 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background: crimson;
+    background: var(--main-color);
 }
 .navbar .max-width{
     display: flex;
@@ -96,7 +99,7 @@ section .title::after{
     font-weight: 600;
 }
 .navbar .logo a span{
-    color: crimson;
+    color: var(--main-color);
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -115,7 +118,7 @@ section .title::after{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color: crimson;
+    color: #62CDFF;
 }
 .navbar.sticky .menu li a:hover{
     color: #fff;
@@ -131,7 +134,7 @@ section .title::after{
     position: fixed;
     height: 45px;
     width: 42px;
-    background: crimson;
+    background: #62CDFF;
     right: 30px;
     bottom: 10px;
     text-align: center;
@@ -185,24 +188,38 @@ section .title::after{
     margin: 5px 0;
 }
 .home .home-content .text-3 span{
-    color: crimson;
+    color: var(--main-color);
     font-weight: 500;
 }
 .home .home-content a{
     display: inline-block;
-    background: crimson;
+    background: var(--main-color);
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
     font-weight: 400;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid var(--main-color);
     transition: all 0.3s ease;
 }
 .home .home-content a:hover{
-    color: crimson;
+    color: var(--main-color);
     background: none;
+}
+.home .home-content .links{
+    display: flex;
+}
+.home .home-content .links a{
+    background: transparent;
+    font-size: 30px;
+    color: #fff;
+    border: none;
+}
+.home .home-content .links a:hover{
+    transform: scale(1.1);
+    transition: all .50s ease;
+    color: var(--main-color);
 }
 /* about section styling */
 .about .title::after{
@@ -226,25 +243,25 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: crimson;
+    color: var(--main-color);
 }
 .about .about-content .right p{
     text-align: justify;
 }
 .about .about-content .right a{
     display: inline-block;
-    background: crimson;
+    background: var(--main-color);
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid var(--main-color);
     transition: all 0.3s ease;
 }
 .about .about-content .right a:hover{
-    color: crimson;
+    color: var(--main-color);
     background: none;
 }
 /* services section styling */
@@ -271,7 +288,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .services .serv-content .card:hover{
-    background: crimson;
+    background: var(--main-color);
 }
 .services .serv-content .card .box{
     transition: all 0.3s ease;
@@ -281,7 +298,7 @@ section .title::after{
 }
 .services .serv-content .card i{
     font-size: 50px;
-    color: crimson;
+    color: var(--main-color);
     transition: color 0.3s ease;
 }
 .services .serv-content .card:hover i{
@@ -309,18 +326,18 @@ section .title::after{
 }
 .skills .skills-content .left a{
     display: inline-block;
-    background: crimson;
+    background: var(--main-color);
     color: #fff;
     font-size: 18px;
     font-weight: 500;
     padding: 8px 16px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid var(--main-color);
     transition: all 0.3s ease;
 }
 .skills .skills-content .left a:hover{
-    color: crimson;
+    color: var(--main-color);
     background: none;
 }
 .skills .skills-content .right .bars{
@@ -348,7 +365,7 @@ section .title::after{
     height: 100%;
     left: 0;
     top: 0;
-    background: crimson;
+    background: var(--main-color);
 }
 .skills-content .right .html::before{
     width: 85%;
@@ -384,7 +401,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .projects .slider .card:hover{
-    background: crimson;
+    background: var(--main-color);
 }
 .projects .slider .card .box{
     display: flex;
@@ -406,7 +423,7 @@ section .title::after{
     width: 150px;
     object-fit: cover;
     border-radius: 50%;
-    border: 5px solid crimson;
+    border: 5px solid var(--main-color);
     transition: all 0.3s ease;
 }
 .projects .slider .card:hover img{
@@ -422,7 +439,7 @@ section .title::after{
     margin: 0 5px;
     outline: none!important;
     border-radius: 50%;
-    border: 2px solid crimson!important;
+    border: 2px solid var(--main-color)!important;
     transition: all 0.3s ease;
 }
 .owl-dot.active{
@@ -431,7 +448,7 @@ section .title::after{
 }
 .owl-dot.active,
 .owl-dot:hover{
-    background: crimson!important;
+    background: var(--main-color)!important;
 }
 /* contact section styling */
 .contact .title::after{
@@ -461,7 +478,7 @@ section .title::after{
 }
 .contact .contact-content .row i{
     font-size: 25px;
-    color: crimson;
+    color: var(--main-color);
 }
 .contact .contact-content .info .head{
     font-weight: 500;
@@ -520,12 +537,12 @@ section .title::after{
   border-radius: 6px;
   cursor: pointer;
   flex-wrap: nowrap;
-  background: crimson;
-  border: 2px solid crimson;
+  background: var(--main-color);
+  border: 2px solid var(--main-color);
   transition: all 0.3s ease;
 }
 .right form .button-area button:hover{
-  color: crimson;
+  color: var(--main-color);
   background: none;
 }
 /* footer section styling */
@@ -536,7 +553,7 @@ footer{
     text-align: center;
 }
 footer span a{
-    color: crimson;
+    color: var(--main-color);
     text-decoration: none;
 }
 footer span a:hover{
