--- a/css/styles.css
+++ b/css/styles.css
@@ -401,7 +401,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .projects .slider .card:hover{
-    background: var(--main-color);
+    /* background: var(--main-color); */
 }
 .projects .slider .card .box{
     display: flex;
@@ -409,6 +409,21 @@ section .title::after{
     align-items: center;
     justify-content: center;
     transition: all 0.3s ease;
+}
+.projects .slider .card .box a{
+    display: block;
+    background: var(--main-color);
+    color: #fff;
+    font-size: 25px;
+    padding: 12px;
+    margin-top: 15px;
+    border-radius: 6px;
+    border: 2px solid var(--main-color);
+    transition: all 0.3s ease;
+}
+.projects .slider .card .box a:hover{
+    color: var(--main-color);
+    background: none;
 }
 .projects .slider .card:hover .box{
     transform: scale(1.05);
@@ -419,10 +434,10 @@ section .title::after{
     margin: 10px 0 7px 0;
 }
 .projects .slider .card img{
-    height: 150px;
-    width: 150px;
+    height: 250px;
+    width: 300px;
     object-fit: cover;
-    border-radius: 50%;
+    border-radius: 6px;
     border: 5px solid var(--main-color);
     transition: all 0.3s ease;
 }
