--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
     text-decoration: none;
 }
 :root{
-    --main-color: #62CDFF;
+    --main-color: #4ebdf0;
 }
 html{
     scroll-behavior: smooth;
@@ -160,7 +160,7 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background: url('../images/banner.jpg') no-repeat center;
+    background: url('https://images.pexels.com/photos/5186869/pexels-photo-5186869.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
@@ -414,8 +414,8 @@ section .title::after{
     display: block;
     background: var(--main-color);
     color: #fff;
-    font-size: 25px;
-    padding: 12px;
+    font-size: 20px;
+    padding: 6px;
     margin-top: 15px;
     border-radius: 6px;
     border: 2px solid var(--main-color);
