--- a/css/styles.css
+++ b/css/styles.css
@@ -191,7 +191,7 @@ section .title::after{
 }
 .home .home-content .text-3{
     font-size: 40px;
-    margin: 5px 0;
+    margin: 5px 0 20px 0;
 }
 .home .home-content .text-3 span{
     color: var(--main-color);
@@ -215,6 +215,7 @@ section .title::after{
 }
 .home .home-content .links{
     display: flex;
+    margin-top: 30px;
 }
 .home .home-content .links a{
     background: transparent;
@@ -229,7 +230,7 @@ section .title::after{
 }
 /* about section styling */
 .about .title::after{
-    content: "who i am";
+    content: "who I am";
 }
 .about .about-content .left{
     width: 45%;
@@ -285,7 +286,7 @@ section .title::after{
 .services .title::after,
 .teams .title::after{
     background: var(--bg-color);
-    content: "what i provide";
+    content: "what I provide";
 }
 .services .serv-content .card{
     width: calc(33% - 20px);
@@ -320,7 +321,7 @@ section .title::after{
 }
 /* skills section styling */
 .skills .title::after{
-    content: "what i know";
+    content: "what I know";
 }
 .skills .skills-content .column{
     width: calc(50% - 30px);
