--- a/css/styles.css
+++ b/css/styles.css
@@ -404,7 +404,7 @@ section .title::after{
 }
 .projects .slider .card{
     background: #222;
-    height: 450px;
+    height: auto;
     width: 300px;
     border-radius: 6px;
     padding: 20px 30px;
@@ -608,7 +608,7 @@ footer span a:hover{
     }
     .navbar .menu{
         position: fixed;
-        height: 50vh;
+        height: 100vh;
         width: 50%;
         left: -100%;
         top: 0;
